--- a/01_Python_Basics/tut_py_2_0_operators.ipynb
+++ b/01_Python_Basics/tut_py_2_0_operators.ipynb
@@ -1106,98 +1106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Order of Operators\n",
-    "\n",
-    "#### Python Operator Precedence (Highest to Lowest)\n",
-    "Here’s the order in which Python evaluates operators:\n",
-    "\n",
-    "- ** (Exponentiation)\n",
-    "\n",
-    "- *, / (Multiplication and Division)\n",
-    "\n",
-    "- +, - (Addition and Subtraction)\n",
-    "\n",
-    "- Operators with the same precedence are evaluated left to right (except **, which is right to left)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "14\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 2\n",
-    "b = 3\n",
-    "c = 4\n",
-    "\n",
-    "result = a + b * c\n",
-    "print(result)  # Output: 14"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 2\n",
-    "b = 3\n",
-    "c = 4\n",
-    "\n",
-    "result = (a + b) * c\n",
-    "print(result)  # Output: 20\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = 2 ** 3 * 4  # = (2**3) * 4 = 8*4 = 32\n",
-    "print(result)  # Output: 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = 10 + 6 / 2 * 3 - 1\n",
-    "print(result)  # Output: 18.0"
+    "### Order of Operators"
    ]
   },
   {
