--- a/tut_py_2_type_part2_dict_set.ipynb
+++ b/tut_py_2_type_part2_dict_set.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "id": "1dffc368-8dca-42c1-9920-125c751d2529",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "78e344a7-c5f8-4225-90a9-d56dfb8e5bda",
    "metadata": {},
    "outputs": [
@@ -53,18 +53,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'A': 100, 'B': 300}\n"
+      "{'Arty': 100, 'Bubba': 300}\n"
      ]
     }
    ],
    "source": [
-    "student_scores = dict([('A',100),('B',300)])\n",
+    "student_scores = dict([('Arty',100),('Bubba',300)])\n",
     "print(student_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "id": "2ea4fc56-44d2-4ae6-9b68-cec71728c280",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "ba1da969-6a07-4dc9-9cd7-f241a70d1377",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "id": "d153e57d-89be-48f9-8dd3-65f7942c8df8",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
+   "id": "f238d10c-9440-4c00-b624-4c68d692e4fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([85, 92, 78])\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = student_scores.values()\n",
+    "print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "b9ce7070-cb13-406e-835d-3bf98753d0e3",
    "metadata": {},
    "outputs": [
@@ -148,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "id": "e8a7999a-b8e9-4600-a1f7-9fdaae47c997",
    "metadata": {},
    "outputs": [
@@ -168,6 +187,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "c1f0928f-f7b2-4515-aad6-c90477fd048c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(my_dict))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "477ce400-b749-4a71-8a9b-3cf8fb86d83e",
    "metadata": {},
@@ -178,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "id": "4b035212-e669-4f6c-bed7-bc4f4072f7cd",
    "metadata": {},
    "outputs": [
@@ -210,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "id": "0bd422bb-8be7-4a10-8d97-d074b9117eaf",
    "metadata": {},
    "outputs": [
@@ -241,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "id": "788af760-a3dd-4547-8941-d3c22e8b414b",
    "metadata": {},
    "outputs": [
@@ -271,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "id": "e347c87a-ae6c-4ce4-bc01-52d2fb202144",
    "metadata": {},
    "outputs": [
@@ -290,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "id": "5c5d1e1e-ad21-4947-853c-a76b718bf0e5",
    "metadata": {},
    "outputs": [
@@ -313,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "id": "b8a2c3e6-1b0d-4490-a48c-b5f86fd17407",
    "metadata": {},
    "outputs": [
@@ -345,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "id": "82553bff-6f86-475f-ad91-88617298cbc7",
    "metadata": {},
    "outputs": [
@@ -376,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "id": "50a62c0f-d2f9-4be9-af85-0a8cd64d4d0c",
    "metadata": {},
    "outputs": [
@@ -399,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "id": "5a90230f-fdf8-41c3-a1e0-305d69f1f2e4",
    "metadata": {},
    "outputs": [
@@ -433,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "id": "6762d86b-9340-41ac-9d23-ccdfdd676b47",
    "metadata": {},
    "outputs": [
@@ -474,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "id": "428c8aeb-5b3e-4b1a-8287-9e122f876795",
    "metadata": {},
    "outputs": [
@@ -512,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "id": "31bae92a-4d94-4e7b-8663-255bd5b94b6e",
    "metadata": {},
    "outputs": [
@@ -537,13 +574,70 @@
    "metadata": {},
    "source": [
     "# Sets\n",
-    "### 1️. Creating and Accessing a set\n",
-    "Scenario: Storing a list of unique fruits."
+    "### 1️. Creating and Accessing a set\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
+   "id": "8038ed63-256f-4571-bd9a-9aa8536d870f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mars', 'saturn', 'jupyter'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "planets = {\"mars\", \"jupyter\", \"saturn\" } \n",
+    "\n",
+    "print(planets)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "7e3f6de9-3447-4aa3-89a9-2f95fbb94a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mars', 'saturn', 'jupyter'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "planets = set([\"mars\", \"jupyter\", \"saturn\"]) # on list\n",
+    "print(planets)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "97112f10-3ddd-4156-bd7b-b05ad1f10148",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mars', 'saturn', 'jupyter'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "planets = set((\"mars\", \"jupyter\", \"saturn\")) # on tuple\n",
+    "print(planets)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "id": "130222ed-2434-4a9b-a41a-577ebf8572f8",
    "metadata": {},
    "outputs": [
@@ -551,12 +645,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'apple', 'banana', 'cherry'}\n"
+      "{'banana', 'apple', 'cherry'}\n"
      ]
     }
    ],
    "source": [
-    "fruits = {\"apple\", \"banana\", \"cherry\", \"apple\", \"apple\"}  # Duplicates areremoved\n",
+    "# Scenario: Storing a list of unique fruits.\n",
+    "fruits = {\"apple\", \"banana\", \"cherry\", \"apple\", \"apple\"}  # Duplicates are removed\n",
     "\n",
     "print(fruits)  "
    ]
@@ -572,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 78,
    "id": "04febcc7-a9e0-477f-92c5-e7319dedad9a",
    "metadata": {},
    "outputs": [
@@ -580,7 +675,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Alice', 'Bob', 'David'}\n"
+      "{'Bob', 'Alice', 'David'}\n"
      ]
     }
    ],
@@ -594,11 +689,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3ff5a4a-d941-44b2-a95b-20b5f399c0d4",
+   "cell_type": "markdown",
+   "id": "84e521c1-5d8d-4e34-8e59-ffc8c939cd60",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 3️. Set Operations (Union, Intersection, Difference)\n",
     "Scenario: Finding common and unique students in two classes."
@@ -606,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
    "id": "13961d73-f817-4013-a681-dc7489c01c74",
    "metadata": {},
    "outputs": [
@@ -614,7 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Emma', 'David', 'Charlie', 'Alice', 'Bob'}\n",
+      "{'Alice', 'Charlie', 'Bob', 'Emma', 'David'}\n",
       "{'Bob'}\n",
       "{'Alice', 'Charlie'}\n"
      ]
@@ -645,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 80,
    "id": "d39456d2-c8d8-4a8b-a7dd-b579276f301e",
    "metadata": {},
    "outputs": [
@@ -675,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 81,
    "id": "86f1095c-b169-4498-8f9a-d28ec9631bef",
    "metadata": {},
    "outputs": [
@@ -719,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
