--- a/tut_py_3_function_0_input_userDefined.ipynb
+++ b/tut_py_3_function_0_input_userDefined.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# in built function:\n",
-    "print, input, int, float, len, range, type, map, filter, any, etc"
+    "print, input, int, float, len, range, type, list, tuple, dict, map, filter, any, etc"
    ]
   },
   {
@@ -424,7 +424,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User defined Function"
+    "## User defined Function\n",
+    "- Makes code modular and easier to read.\n",
+    "- Use the same logic in multiple places without rewriting.\n",
+    "- Break big problems into smaller, manageable steps."
    ]
   },
   {
@@ -724,83 +727,65 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Miscellaneous\n",
-    "## examples of some more in built functions "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. map() – Apply a Function to Each Item in a List\n",
-    "# The map() function applies a function to every item in an iterable (like a list).\n",
-    "\n",
-    "# Example: Convert a List of Temperatures from Celsius to Fahrenheit\n",
-    "temps_celsius = [0, 10, 20, 30, 40]\n",
-    "\n",
-    "# Convert to Fahrenheit using map()\n",
-    "temps_fahrenheit = list(map(lambda c: (c * 9/5) + 32, temps_celsius))\n",
-    "\n",
-    "print(temps_fahrenheit)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "[2, 4, 6, 8, 10]\n"
+      "Which operation would you like to perform? (+, -, *):  +\n",
+      "Enter the first number:  4\n",
+      "Enter the second number:  6\n"
      ]
-    }
-   ],
-   "source": [
-    "# 2. filter() – Select Items Based on a Condition\n",
-    "# The filter() function filters elements based on a condition (returns True).\n",
-    "\n",
-    "# Example: Filter Out Odd Numbers from a List\n",
-    "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "\n",
-    "# Keep only even numbers\n",
-    "even_numbers = list(filter(lambda x: x % 2 == 0, numbers))\n",
-    "\n",
-    "print(even_numbers)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120\n"
+      "Result: 10.0\n"
      ]
     }
    ],
    "source": [
-    "# 3. reduce() – Perform a Cumulative Computation\n",
-    "# The reduce() function (from functools) reduces a sequence to a single value.\n",
+    "## a simple example of used defined fn:\n",
+    "def add(a, b):\n",
+    "    return a + b\n",
     "\n",
-    "# Example: Find the Product of All Numbers in a List\n",
-    "from functools import reduce\n",
+    "def subtract(a, b):\n",
+    "    return a - b\n",
     "\n",
-    "numbers = [1, 2, 3, 4, 5]\n",
+    "def multiply(a, b):\n",
+    "    return a * b\n",
     "\n",
-    "# Multiply all numbers together\n",
-    "product = reduce(lambda x, y: x * y, numbers)\n",
+    "def calculator():\n",
+    "    # Ask the user to choose an operation\n",
+    "    operation = input(\"Which operation would you like to perform? (+, -, *): \")\n",
     "\n",
-    "print(product)\n"
+    "    # Ask the user to enter two numbers\n",
+    "    try:\n",
+    "        num1 = float(input(\"Enter the first number: \"))\n",
+    "        num2 = float(input(\"Enter the second number: \"))\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid number entered.\")\n",
+    "        return\n",
+    "\n",
+    "    # Perform the selected operation\n",
+    "    if operation == '+':\n",
+    "        result = add(num1, num2)\n",
+    "        print(\"Result:\", result)\n",
+    "    elif operation == '-':\n",
+    "        result = subtract(num1, num2)\n",
+    "        print(\"Result:\", result)\n",
+    "    elif operation == '*':\n",
+    "        result = multiply(num1, num2)\n",
+    "        print(\"Result:\", result)\n",
+    "    else:\n",
+    "        print(\"Invalid operation selected.\")\n",
+    "\n",
+    "# Call the calculator\n",
+    "calculator()\n"
    ]
   },
   {
@@ -808,18 +793,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 4. any() – Check If At Least One Element is True\n",
-    "# The any() function checks if at least one element in an iterable is True.\n",
-    "\n",
-    "# Example: Check if a List Contains Any Positive Numbers\n",
-    "numbers = [-3, -2, -1, 0, 5]\n",
-    "\n",
-    "# Check if at least one number is positive\n",
-    "has_positive = any(x > 0 for x in numbers)\n",
-    "\n",
-    "print(has_positive)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -838,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
