--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -400,6 +400,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6fcf1ac8-a135-4e1b-8a63-bcb1703bc11a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello++Bob++Julia\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "d025eac2-9754-4ffa-872a-17ce06992ae3",
    "metadata": {},
@@ -950,17 +966,129 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9b258979-f780-477e-856f-51283a595ffe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Bob Julia\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = \" \" # or use comma\n",
+    "new_str = st.join([\"hello\", \"Bob\", \"Julia\"])\n",
+    "print(new_str)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a925e0a6-3d83-44a1-88ab-a744dc5eed1d",
    "metadata": {},
    "source": [
     "### 3️. Tuple (tuple) Operations\n",
-    "A tuple is an ordered, immutable collection of elements."
+    "- A tuple is an ordered, immutable collection of elements.\n",
+    "- can contain duplicates\n",
+    "- are heterogenous (can contain elements of different kind)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
+   "id": "b94893c4-0f8f-4090-acb2-a2cbb6aab3a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 'cherry')\n",
+      "<class 'tuple'>\n",
+      "('apple', 'banana', 'cherry')\n",
+      "<class 'tuple'>\n",
+      "('apple', 'banana', 'cherry')\n",
+      "<class 'tuple'>\n",
+      "('apple',)\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tuple declaration\n",
+    "tpl = (\"apple\", \"banana\", \"cherry\")\n",
+    "print(tpl)\n",
+    "print(type(tpl))\n",
+    "\n",
+    "\n",
+    "tpl = \"apple\", \"banana\", \"cherry\"\n",
+    "print(tpl)\n",
+    "print(type(tpl))\n",
+    "\n",
+    "tpl = tuple([\"apple\", \"banana\", \"cherry\"])  # from list\n",
+    "print(tpl)\n",
+    "print(type(tpl))\n",
+    "\n",
+    "one_item_tpl = (\"apple\",) # mind the comma\n",
+    "print(one_item_tpl)\n",
+    "print(type(one_item_tpl))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8f3891dd-1cc6-4779-a253-e54ce32da422",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "tpl = (\"apple\")  # This is a string and not a tuple!\n",
+    "print(tpl)\n",
+    "print(type(tpl))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4815537e-f85a-4c2a-b8b5-346a5d8e3fac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# number tuple\n",
+    "number_tuple = (10, 20, 25.75)\n",
+    "print(number_tuple)\n",
+    "# Output (10, 20, 25.75)\n",
+    "\n",
+    "# string tuple\n",
+    "string_tuple = ('Jessa', 'Emma', 'Kelly')\n",
+    "print(string_tuple)\n",
+    "# Output ('Jessa', 'Emma', 'Kelly')\n",
+    "\n",
+    "# mixed type tuple\n",
+    "sample_tuple = ('Jessa', 30, 45.75, [25, 78])\n",
+    "print(sample_tuple)\n",
+    "# Output ('Jessa', 30, 45.75, [25, 78])\n",
+    "\n",
+    "# create a tuple using tuple() constructor\n",
+    "sample_tuple2 = tuple(('Jessa', 30, 45.75, [23, 78]))\n",
+    "print(sample_tuple2)\n",
+    "# Output ('Jessa', 30, 45.75, [23, 78])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "a3b1029a-0c38-44fe-ad33-351c706df058",
    "metadata": {},
    "outputs": [
@@ -970,8 +1098,9 @@
      "text": [
       "apple\n",
       "cherry\n",
+      "banana\n",
       "('banana', 'cherry')\n",
-      "('apple', 'banana', 'cherry', 'orange', 'grape')\n",
+      "('apple', 'banana', 'cherry', 'orange', 'grape', 'apple')\n",
       "('apple', 'banana', 'cherry', 'apple', 'banana', 'cherry')\n",
       "True\n",
       "2\n",
@@ -986,12 +1115,13 @@
     "# Accessing elements\n",
     "print(fruits[0])  # 'apple'\n",
     "print(fruits[-1])  # 'cherry'\n",
+    "print(fruits[-2])  # 'cherry'\n",
     "\n",
     "# Slicing\n",
     "print(fruits[1:])  # ('banana', 'cherry')\n",
     "\n",
     "# Tuple concatenation\n",
-    "new_fruits = fruits + (\"orange\", \"grape\")\n",
+    "new_fruits = fruits + (\"orange\", \"grape\", \"apple\")\n",
     "print(new_fruits)  # ('apple', 'banana', 'cherry', 'orange', 'grape')\n",
     "\n",
     "# Tuple repetition\n",
@@ -1006,6 +1136,132 @@
     "# Tuple length\n",
     "print(len(fruits))  # 3\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d3984eb-0f7a-4606-9443-f5d4ea3aee29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1 = (10, 20, 30, 40, 50)\n",
+    "\n",
+    "# get index of item 30\n",
+    "position = tuple1.index(30)\n",
+    "print(position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9e3cf28d-036d-469d-8a79-40d243dbcd87",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m planets \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvenus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muranus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mearth\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mplanets\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjupyter\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "planets = (\"venus\", \"uranus\", \"earth\")\n",
+    "planets[1] = \"jupyter\" # tuple are immutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f3ca0a6f-3727-45cd-ba71-a26481841271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, [25, 75, 85])\n",
+      "(10, 20, [250, 75, 85])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# If one of the items is itself a mutable data type as a list, then we \n",
+    "# can change its values in the case of a nested tuple.\n",
+    "tuple1 = (10, 20, [25, 75, 85])\n",
+    "# before update\n",
+    "print(tuple1)\n",
+    "\n",
+    "# modify last item's first value\n",
+    "tuple1[2][0] = 250\n",
+    "# after update\n",
+    "print(tuple1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b60bc49b-b32a-4162-988b-18fc7511f3e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1 = (10, 20, 60, 30, 60, 40, 60)\n",
+    "count = tuple1.count(60) # Count all occurrences of item 60\n",
+    "print(count)\n",
+    "\n",
+    "count = tuple1.count(600)\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dada237b-ba77-4c4f-88a0-a3e6c9a9f089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple1 = (10, 20, 60, 30, 60, 40, 60)\n",
+    "print(min(tuple1))\n",
+    "print(max(tuple1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fab3dbd-c19e-4321-877d-c362be637f50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1024,7 +1280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
