--- a/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
+++ b/tut_py_2_type_part1_numeric_str_tuple_list.ipynb
@@ -1032,7 +1032,7 @@
     "print(tpl)\n",
     "print(type(tpl))\n",
     "\n",
-    "one_item_tpl = (\"apple\",) # mind the comma\n",
+    "one_item_tpl = (\"apple\",) # mind the comma for it creates tuples\n",
     "print(one_item_tpl)\n",
     "print(type(one_item_tpl))\n"
    ]
@@ -1161,10 +1161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "9e3cf28d-036d-469d-8a79-40d243dbcd87",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['venus', 'jupyter', 'earth']\n"
+     ]
+    },
     {
      "ename": "TypeError",
      "evalue": "'tuple' object does not support item assignment",
@@ -1172,12 +1179,17 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m planets \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvenus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muranus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mearth\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mplanets\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjupyter\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "Cell \u001b[1;32mIn[6], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(planets)\n\u001b[0;32m      5\u001b[0m planets \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvenus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muranus\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mearth\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 6\u001b[0m \u001b[43mplanets\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjupyter\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;66;03m# tuple are immutable\u001b[39;00m\n",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
    "source": [
+    "# tuple are immutable\n",
+    "planets = [\"venus\", \"uranus\", \"earth\"]\n",
+    "planets[1] = \"jupyter\" # list are mutable\n",
+    "print(planets)\n",
+    "\n",
     "planets = (\"venus\", \"uranus\", \"earth\")\n",
     "planets[1] = \"jupyter\" # tuple are immutable"
    ]
@@ -1236,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "dada237b-ba77-4c4f-88a0-a3e6c9a9f089",
    "metadata": {},
    "outputs": [
@@ -1245,14 +1257,18 @@
      "output_type": "stream",
      "text": [
       "10\n",
-      "60\n"
+      "60\n",
+      "280\n",
+      "7\n"
      ]
     }
    ],
    "source": [
     "tuple1 = (10, 20, 60, 30, 60, 40, 60)\n",
     "print(min(tuple1))\n",
-    "print(max(tuple1))"
+    "print(max(tuple1))\n",
+    "print(sum(tuple1))\n",
+    "print(len(tuple1))\n"
    ]
   },
   {
