--- a/tut_numpy_pandas/tut_numpy_2_datatypes_arraymath.ipynb
+++ b/tut_numpy_pandas/tut_numpy_2_datatypes_arraymath.ipynb
@@ -425,6 +425,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "afe6a2e4-dd1d-40a7-8ef7-217ca40b31df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8 9 4]\n",
+      "[1 6 6]\n",
+      "[3 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([2, 3, 4])\n",
+    "b = np.array([3, 2, 1])\n",
+    "\n",
+    "result = np.power(a, b)\n",
+    "print(result)  # Output: [8 9 4] → [2^3, 3^2, 4^1]\n",
+    "##########################################\n",
+    "a = np.array([10, 20, 30])\n",
+    "b = np.array([3, 7, 8])\n",
+    "\n",
+    "# rem1 = np.remainder(a, b)\n",
+    "rem2 = np.mod(a, b)\n",
+    "\n",
+    "# print(rem1)  # Output: [1 6 6]\n",
+    "print(rem2)  # Output: [1 6 6]\n",
+    "\n",
+    "result = np.floor_divide(a, b)\n",
+    "print(result)  # Output: [3 2 3] → [10//3, 20//7, 30//8]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "261da40b-e809-48c9-b24e-0426ee50ee54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "[ 1  3  6 10]\n",
+      "[ 1  2  6 24]\n",
+      "[5 5 5]\n",
+      "[3 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "\n",
+    "result = np.prod(arr)\n",
+    "print(result)  # Output: 24 → 1*2*3*4\n",
+    "\n",
+    "result = np.cumsum(arr)\n",
+    "print(result)  # Output: [ 1  3  6 10]\n",
+    "\n",
+    "result = np.cumprod(arr)\n",
+    "print(result)  # Output: [ 1  2  6 24]\n",
+    "####################################\n",
+    "arr = np.array([10, 15, 20, 25])\n",
+    "\n",
+    "result = np.diff(arr)\n",
+    "print(result)  # Output: [5 5 5] → [15-10, 20-15, 25-20]\n",
+    "\n",
+    "####################################\n",
+    "arr2 = np.array([[1, 2],\n",
+    "                 [3, 4]]\n",
+    ")\n",
+    "print(np.prod(arr2, axis=0))  # Output: [3 8] → column-wise product\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cd4569f2-9341-46c4-8b6a-bf64826d8043",
    "metadata": {},
@@ -810,6 +892,7 @@
     }
    ],
    "source": [
+    "# some stats operations\n",
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
@@ -1009,11 +1092,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "81fc473f-6934-44e2-b9d5-51124a7761f9",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1.]\n",
+      " [1. 1.]]\n",
+      "[[250.  125. ]\n",
+      " [125.   62.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# optional\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([10, 20, 30, 40, 50])\n",
+    "y = np.array([5,  10, 15, 20, 25])\n",
+    "\n",
+    "corr_matrix = np.corrcoef(x, y)\n",
+    "print(corr_matrix)\n",
+    "\n",
+    "\n",
+    "cov_matrix = np.cov(x, y)\n",
+    "print(cov_matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4b1af5fd-db06-46ab-823f-bd8ef552a63b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False  True False  True False]\n",
+      "[2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if elements are in a list or array\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1, 2, 3, 4, 5])\n",
+    "b = np.array([2, 4, 6])\n",
+    "\n",
+    "result = np.isin(a, b) # Returns a boolean array showing whether each element of the first array exists in the second array.\n",
+    "print(result)         # Output: [False  True False  True False]\n",
+    "\n",
+    "# To get actual matching values:\n",
+    "print(a[result])      # Output: [2 4]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ab507c9b-8857-466f-928c-67219f6ad7fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 2, 3, 4])\n",
+    "b = np.array([3, 4, 5, 6])\n",
+    "\n",
+    "print(np.intersect1d(a, b))  # Output: [3 4]  Elements common to both arrays\n",
+    "print(np.setdiff1d(a, b))  # Output: [1 2]  Elements in a that are not in b\n",
+    "print(np.union1d(a, b))  # Output: [1 2 3 4 5 6] All unique elements from both arrays\n",
+    "\n",
+    "# and there are many others"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4943850-a594-4bf4-8b9c-d1f2fb283d43",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## others clip, swapaxes, delete, put"
+   ]
   }
  ],
  "metadata": {
