--- a/tut_py_1_crash_course.ipynb
+++ b/tut_py_1_crash_course.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a59caf26-e88c-4199-9cea-7748d035cd6b",
    "metadata": {},
    "outputs": [
@@ -44,11 +44,29 @@
     "is_ready = True  # boolean\n",
     "z = None         # NoneType\n",
     "\n",
-    "print(f\"x: {x}\")\n",
-    "print(f\"y: {y}\")\n",
-    "print(f\"name: {name}\")\n",
-    "print(f\"is_ready: {is_ready}\")\n",
-    "print(f\"z: {z}\")\n",
+    "print(\"Hello world\")\n",
+    "\n",
+    "print(\"The variable x:\",x)\n",
+    "print(f\"The variable x: {x}\")\n",
+    "\n",
+    "print(\"The variable y:\",y)\n",
+    "print(f\"The variable y: {y}\")\n",
+    "\n",
+    "print(\"The variable name:\",name)\n",
+    "print(f\"The variable name: {name}\")\n",
+    "\n",
+    "print(\"The variable is_ready:\", is_ready)\n",
+    "print(f\"The variable is_ready: {is_ready}\")\n",
+    "\n",
+    "print(\"The variable z: \",z)\n",
+    "print(f\"The variable z: {z}\")\n",
+    "\n",
+    "#multiline strings\n",
+    "msg = \"\"\"Hello students.\n",
+    "Hope you enjoy this class.\n",
+    "Good luck\n",
+    "\"\"\"\n",
+    "print(msg)\n",
     "\n",
     "# Type conversion\n",
     "a = int(3.7)\n",
@@ -58,17 +76,22 @@
     "\n",
     "# 2. Control Structures\n",
     "if x > 5:\n",
-    "    print(\"x is greater than 5\")\n",
+    "    print(\"x is greater than 5\"whileprint(\"CONGRATULATION\")\n",
     "elif x == 5:\n",
     "    print(\"x is 5\")\n",
+    "    print(\" Well, I am happy for x\")\n",
     "else:\n",
     "    print(\"x is less than 5\")\n",
+    "    print(\"x is not happy\")\n",
     "\n",
     "for i in range(3):\n",
+    "    print(\"I am trapped inside a for loop. Somebody help me.\")\n",
     "    print(f\"Loop iteration: {i}\")\n",
+    "    \n",
     "\n",
     "count = 0\n",
     "while count < 3:\n",
+    "    print(\"I am trapped inside a while loop. Somebody help me.\")\n",
     "    print(f\"Count is: {count}\")\n",
     "    count += 1\n",
     "\n",
