--- a/tut_py_1_crash_course.ipynb
+++ b/tut_py_1_crash_course.ipynb
@@ -118,9 +118,11 @@
     "\n",
     "# 4. Functions\n",
     "def greet(name):\n",
+    "    print(\"OK, Now I am inside a function.\")\n",
     "    return f\"Hello, {name}!\"\n",
     "\n",
-    "print(greet(\"Bob\"))\n",
+    "res = greet(\"Bob\")\n",
+    "print(res)\n",
     "\n",
     "# Lambda function\n",
     "add = lambda a, b: a + b\n",
