--- a/tut_py_1_crash_course.ipynb
+++ b/tut_py_1_crash_course.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a59caf26-e88c-4199-9cea-7748d035cd6b",
    "metadata": {},
    "outputs": [
@@ -18,13 +18,23 @@
    "source": [
     "# Part 1: Python Basics for ML Crash Course\n",
     "\n",
-    "print(\"Hello world\")\n",
+    "# print(\"1 Hello world\") # octothorpe or hashtag\n",
+    "\n",
+    "# using , to print series of stmts \n",
+    "print(\"2 Hello world. Today its raining\")\n",
+    "print(\"3 Hello world.\", \"Today its raining\")\n",
+    "print(\"4 Hello world.\", \"Today its raining\", \"It is going to be humid today.\", \"Good luck\")\n",
+    "\n",
     "\n",
     "print(\"\"\"In the vastness of space, you define\n",
     "A beauty that's beyond compare\n",
     "A sight that makes us all stop and stareTwinkling lights in the dark night sky\n",
     "Guiding us through life, as we try\n",
     "To find our way, to reach our dreams\"\"\")\n",
+    "\n",
+    "\n",
+    "print(\"x\")\n",
+    "print(x) # gives error because x is variable and not define. So lets define the var.\n",
     "\n",
     "# 1. Python Syntax & Data Types\n",
     "x = 10           # integer\n",
@@ -78,10 +88,18 @@
     "    print(\"x is not happy\")\n",
     "\n",
     "\n",
+    "print(\"Hello world\")\n",
+    "print(\"Hello world\")\n",
+    "print(\"Hello world\")\n",
     "for i in range(3):\n",
-    "    print(\"I am trapped inside a for loop. Somebody help me.\")\n",
-    "    print(f\"Loop iteration: {i}\")\n",
-    "    \n",
+    "  print(\"Hello world\")\n",
+    "  \n",
+    "  \n",
+    "for i in range(3):\n",
+    "    print(\"I am trapped inside a for loop. When would I get out?.\")\n",
+    "    print(f\"Loop iterator: {i}\")\n",
+    "\n",
+    "print(\"YEA...Finally I am out\")\n",
     "\n",
     "count = 0\n",
     "while count < 3:\n",
