--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e724929f-5c74-4032-aa07-f4e32aaadc65",
    "metadata": {
     "colab": {
@@ -31,31 +31,12 @@
     }
    ],
    "source": [
-    "print(\"hello world jupyter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d8d3cc62-5d74-4e2a-998d-8c016b4cb14e",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "d8d3cc62-5d74-4e2a-998d-8c016b4cb14e",
-    "outputId": "abb33836-1d04-4865-ef8d-a30f7c11b64f"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Today is good day to learn python.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Today is good day to learn python.\")"
+    "# print(\"1 Hello world\") # octothorpe or hashtag\n",
+    "\n",
+    "# using , to print series of stmts \n",
+    "print(\"2 Hello world. Today its raining\")\n",
+    "print(\"3 Hello world.\", \"Today its raining\")\n",
+    "print(\"4 Hello world.\", \"Today its raining\", \"It is going to be humid today.\", \"Good luck\")"
    ]
   },
   {
