--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,16 +297,16 @@
     }
    ],
    "source": [
-    "a = 16\n",
-    "b = 15\n",
-    "bool_exp = a > b\n",
+    "x = 16\n",
+    "y = 15\n",
+    "bool_exp = x > y # this is a boolean type\n",
     "\n",
     "print(bool_exp) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,15 +319,15 @@
    ],
    "source": [
     "# or I can print the value directly\n",
-    "a = 16\n",
-    "b = 15\n",
+    "x = 16\n",
+    "y = 15\n",
     "\n",
-    "print(a > b) "
+    "print(x > y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -339,15 +339,15 @@
     }
    ],
    "source": [
-    "a = 16\n",
-    "b = 15\n",
+    "x = 16\n",
+    "y = 15\n",
     "\n",
-    "print(a < b) "
+    "print(x < y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -359,15 +359,15 @@
     }
    ],
    "source": [
-    "a = 13\n",
-    "b = 15\n",
+    "x = 13\n",
+    "y = 15\n",
     "\n",
-    "print(a < b) "
+    "print(x < y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -379,14 +379,14 @@
     }
    ],
    "source": [
-    "a = 15\n",
-    "b = 15\n",
-    "print(a >= b) "
+    "x = 15\n",
+    "y = 15\n",
+    "print(x >= y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -398,14 +398,14 @@
     }
    ],
    "source": [
-    "a = 13\n",
-    "b = 15\n",
-    "print(a >= b) "
+    "x = 13\n",
+    "y = 15\n",
+    "print(x >= y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -417,9 +417,9 @@
     }
    ],
    "source": [
-    "a = 20\n",
-    "b = 15\n",
-    "print(a >= b) "
+    "x = 20\n",
+    "y = 15\n",
+    "print(x >= y) "
    ]
   },
   {
@@ -560,6 +560,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "x = chr(12)\n",
+    "y = chr(13)\n",
+    "\n",
+    "b = x < y\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -676,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -690,14 +704,14 @@
    "source": [
     "x = 5\n",
     "y = 6\n",
-    "bool_exp = x < 3 and x < 10\n",
+    "b = x < 3 and x < 10\n",
     "\n",
-    "print(bool_exp)"
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -711,14 +725,14 @@
    "source": [
     "x = 5\n",
     "y = 6 \n",
-    "bool_exp = x > 3 and x < 2\n",
+    "b = x > 3 and x < 2\n",
     "\n",
-    "print(bool_exp)"
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -732,9 +746,9 @@
    "source": [
     "x = 5\n",
     "y = 6 \n",
-    "bool_exp = x < 3 or x < 10\n",
+    "b = x < 3 or x < 10\n",
     "\n",
-    "print(bool_exp)"
+    "print(b)"
    ]
   },
   {
@@ -768,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -783,14 +797,14 @@
     "a=5\n",
     "b=10\n",
     "c=12\n",
-    "bool_exp = a<10 or (b>10 or c<10)\n",
+    "b = a<10 or (b>10 or c<10)\n",
     "\n",
-    "print(bool_exp)"
+    "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -802,11 +816,11 @@
     }
    ],
    "source": [
-    "a=5\n",
-    "b=10\n",
-    "c=12\n",
+    "x=5\n",
+    "y=10\n",
+    "z=12\n",
     "\n",
-    "print(a<10 and (b>10 or c<10))"
+    "print(x<10 and (y>10 or z<10))"
    ]
   },
   {
@@ -1119,6 +1133,32 @@
     "\n",
     "c = a\n",
     "print(a is c)   # True — both point to the same list object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = [1, 2, 3] # 0A1203CF\n",
+    "n = m\n",
+    "\n",
+    "print(id(m)) # memory address (identity) of the object m.\n",
+    "print(id(n)) # memory address (identity) of the object n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = [1, 2, 3] \n",
+    "n = [1, 2, 3]\n",
+    "\n",
+    "print(id(m)) # memory address (identity) of the object m.\n",
+    "print(id(n)) # memory address (identity) of the object n."
    ]
   },
   {
