--- a/tut_py_2_0_operators.ipynb
+++ b/tut_py_2_0_operators.ipynb
@@ -299,9 +299,9 @@
    "source": [
     "x = 16\n",
     "y = 15\n",
-    "bool_exp = x > y # this is a boolean type\n",
+    "b = x > y # this is a boolean type\n",
     "\n",
-    "print(bool_exp) "
+    "print(b) "
    ]
   },
   {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,14 +436,14 @@
     }
    ],
    "source": [
-    "a = 13\n",
-    "b = 15\n",
-    "print(a <= b) "
+    "x = 13\n",
+    "y = 15\n",
+    "print(x <= y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -457,12 +457,12 @@
    "source": [
     "# is equal to\n",
     "# a == b is False \n",
-    "print(a == b) "
+    "print(x == y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -474,14 +474,14 @@
     }
    ],
    "source": [
-    "a = 15\n",
-    "b = 16\n",
-    "print(a != b) "
+    "x = 15\n",
+    "y = 16\n",
+    "print(x != y) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -493,9 +493,9 @@
     }
    ],
    "source": [
-    "a = \"a\"\n",
-    "b = \"d\"\n",
-    "print(a > b) # lexicograph"
+    "x = \"a\"\n",
+    "y = \"d\"\n",
+    "print(x > y) # lexicograph"
    ]
   },
   {
