--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -7,7 +7,37 @@
     "id": "41f90248-9f29-492e-8bb9-07b88cc7e03c"
    },
    "source": [
-    "## Print simple hello world"
+    "## Print simple hello world\n",
+    "\n",
+    "```\n",
+    "The universe is a vast and mysterious expanse, stretching far beyond what our eyes can see. It's filled with billions of galaxies, each holding stars, planets, and secrets waiting to be discovered. From black holes that warp time to nebulas that birth stars, every corner holds a story. Despite its immense scale, the universe follows precise laws that hint at a hidden order. As we explore it, we not only uncover the cosmos but also understand more about ourselves.\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "The universe is a vast and mysterious expanse, stretching far beyond\n",
+    "what our eyes can see. It's filled with billions of galaxies, each holding stars,\n",
+    "planets, and secrets waiting to be discovered. From black holes that warp time \n",
+    "to nebulas that birth stars, every corner holds a story. Despite its immense scale,\n",
+    "the universe follows precise laws that hint at a hidden order. As we explore it, \n",
+    "we not only uncover the cosmos but also understand more about ourselves.\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "The universe is a vast and mysterious expanse, stretching far beyond \\\n",
+    "what our eyes can see. It's filled with billions of galaxies, each holding stars, \\\n",
+    "planets, and secrets waiting to be discovered. From black holes that warp time \\\n",
+    "to nebulas that birth stars, every corner holds a story. Despite its immense scale, \\\n",
+    "the universe follows precise laws that hint at a hidden order. As we explore it, \\\n",
+    "we not only uncover the cosmos but also understand more about ourselves.\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "Beneath the stars, the night wind sings,\n",
+    "Of quiet dreams and silver wings.\n",
+    "The moonlight dances on the sea,\n",
+    "A gentle world, so wild and free.\n",
+    "In silence, peace begins to grow.\n",
+    "```\n"
    ]
   },
   {
@@ -601,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
