--- a/tut_py_1_crash_course.ipynb
+++ b/tut_py_1_crash_course.ipynb
@@ -1,17 +1,90 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3b46200a-5fe4-4807-a4c9-340500fbd7f6",
+   "metadata": {},
+   "source": [
+    "# crash course\n",
+    "\n",
+    "```\n",
+    "In the vastness of space, you define\n",
+    "A beauty that's beyond compare\n",
+    "A sight that makes us all stop and stareTwinkling lights in the dark night sky\n",
+    "Guiding us through life, as we try\n",
+    "To find our way, to reach our dreams\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a59caf26-e88c-4199-9cea-7748d035cd6b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'(' was never closed (3397810204.py, line 49)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 49\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"x is greater than 5\"whileprint(\"CONGRATULATION\")\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m '(' was never closed\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 Hello world. Today its raining\n",
+      "3 Hello world. Today its raining\n",
+      "4 Hello world. Today its raining It is going to be humid today. Good luck\n",
+      "In the vastness of space, you define\n",
+      "A beauty that's beyond compare\n",
+      "A sight that makes us all stop and stareTwinkling lights in the dark night sky\n",
+      "Guiding us through life, as we try\n",
+      "To find our way, to reach our dreams\n",
+      "x\n",
+      "The variable x: 10\n",
+      "The variable x: 10\n",
+      "The type is : <class 'int'>\n",
+      "The variable y: 3.14\n",
+      "The variable y: 3.14\n",
+      "The type is : <class 'float'>\n",
+      "The variable name: Alice\n",
+      "The variable name: Alice\n",
+      "The type is : <class 'str'>\n",
+      "The variable is_ready: True\n",
+      "The variable is_ready: True\n",
+      "The type is : <class 'bool'>\n",
+      "The variable z:  None\n",
+      "The variable z: None\n",
+      "Hello students.\n",
+      "Hope you enjoy this class.\n",
+      "Good luck\n",
+      "\n",
+      "Converted values: 3, 2.5, 100\n",
+      "x is greater than 5\n",
+      "CONGRATULATION\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "Hello world\n",
+      "I am trapped inside a for loop. When would I get out?.\n",
+      "Loop iterator: 0\n",
+      "I am trapped inside a for loop. When would I get out?.\n",
+      "Loop iterator: 1\n",
+      "I am trapped inside a for loop. When would I get out?.\n",
+      "Loop iterator: 2\n",
+      "YEA...Finally I am out\n",
+      "I am trapped inside a while loop. Somebody help me.\n",
+      "Count is: 0\n",
+      "I am trapped inside a while loop. Somebody help me.\n",
+      "Count is: 1\n",
+      "I am trapped inside a while loop. Somebody help me.\n",
+      "Count is: 2\n",
+      "First element: 7\n",
+      "Tuple: (7, 2, 1, 4, 1, 4)\n",
+      "Set: {1, 2, 4, 7}\n",
+      "Name: Alice\n",
+      "Squares: [0, 1, 4, 9, 16]\n",
+      "OK, Now I am inside a function.\n",
+      "Hello, Bob!\n",
+      "Function add: 7\n",
+      "Lambda add: 7\n",
+      "You can't divide by zero!\n"
      ]
     }
    ],
@@ -34,9 +107,9 @@
     "\n",
     "\n",
     "print(\"x\")\n",
-    "print(x) # gives error because x is variable and not define. So lets define the var.\n",
+    "# print(x) # gives error because x is variable and not define. So lets define the var.\n",
     "\n",
-    "# 1. Python Syntax & Data Types\n",
+    "# 1. Python Syntax & Data Types: int, string, float, bool, complex,\n",
     "x = 10           # integer\n",
     "y = 3.14         # float\n",
     "name = \"Alice\"   # string\n",
@@ -143,7 +216,7 @@
     "    return res\n",
     "    \n",
     "ans = add(3,4)\n",
-    "print(f\"Function add: {ans)}\")\n",
+    "print(f\"Function add: {ans}\")\n",
     "\n",
     "\n",
     "# Lambda function\n",
@@ -182,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
